--- a/Components/Homepage/home/home.html
+++ b/Components/Homepage/home/home.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Homepage</title>
   <link rel="stylesheet" href="reset.css" type="text/css" />
-  <link rel="stylesheet" href="style.css" type="text/css" />
+  <link rel="stylesheet" href="home.css" type="text/css" />
 </head>
 <body>
     <p>Welcome to homepage!</p>
