--- a/Components/Homepage/mainpage/main.html
+++ b/Components/Homepage/mainpage/main.html
@@ -22,7 +22,7 @@
         <h3>Welcome to Health+!</h3>
         <p>Health+ is a Wellbeing WebApp, specifically targeted towards FDM consultants and internal staff. <br>
         Health+ will provide fitness, mental health and general wellbeing support through features like: trackers, various resources on these topics, <br>
-        forums and a chat(??) platform, where FDM Employees will be able to contact one of the 30 Mental Health Ambassadors.</p>
+        forums and a chat function, where FDM Employees will be able to contact one of the 30 Mental Health Ambassadors.</p>
         <div class="button"><button><a class="b" href="login.html">Click here to login!</a></button></div>
     </div>
     <footer>
