--- a/Components/Track/tracking.html
+++ b/Components/Track/tracking.html
@@ -19,6 +19,12 @@
     <input type="number" id="height" name="height"><br><br>
     <label for="weight">Weight (kg):</label>
     <input type="number" id="weight" name="weight"><br><br>
+    <label for="goal">Goal:</label>
+    <select id="goal">
+    <option value="lose">Lose</option>
+    <option value="maintain">Maintain</option>
+    <option value="gain">Gain</option>
+    </select>
     <input type="button" id="calculateBtn" value="Calculate">
     <div id="result"></div>  <!-- Box to display the recommended daily calorie intake -->
 </form>
@@ -34,18 +40,17 @@
     <h2>Exercise Tracking:</h2>
     <label for="exerciseType">Exercise Type:</label>
     <input type="text" id="exerciseType" name="exerciseType"><br><br>
+    <label for="intensity">Exercise Intensity:</label>
+    <select id="intensity" name="intensity">
+    <option value="low">Low</option>
+    <option value="moderate" selected>Moderate</option>
+    <option value="high">High</option>
+    </select>
     <label for="duration">Duration (minutes):</label>
     <input type="number" id="duration" name="duration"><br><br>
     <input type="button" value="Track Exercise" onclick="trackExercise()"><br><br>
 </div>
-<!--<div>-->
-<!--    <h2>Steps Tracker:</h2>-->
-<!--    <label for="duration">Duration (minutes):</label>-->
-<!--    <input type="number" id="duration" name="duration"><br><br>-->
-<!--    <label for="Number of Steps">Number of Steps:</label>-->
-<!--    <input type="text" id="Number of Steps" name="Number of Steps"><br><br>-->
-<!--    <input type="button" value="Track Steps" onclick="trackExercise()"><br><br>-->
-<!--</div>-->
+
 <div>
     <h2>Daily Calories:</h2>
     <p>Calories Consumed: <span id="caloriesConsumed">0</span></p>
@@ -55,4 +60,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
