--- a/Components/Homepage/mainpage/main.html
+++ b/Components/Homepage/mainpage/main.html
@@ -28,10 +28,10 @@
     <footer>
         <nav>
             <ul>
-                <li><a href="priv.html">Privacy</a></li>
-                <li><a href="tandc.html">Terms and Conditions</a></li>
-                <li><a href="faqs.html">FAQs</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="../../Homepage/privacy/priv.html">Privacy</a></li>
+                <li><a href="../../Homepage/termsconditions/tandc.html">Terms and Conditions</a></li>
+                <li><a href="../../Homepage/faq/faqs.html">FAQs</a></li>
+                <li><a href="../../Homepage/contact/contact.html">Contact the Team</a></li>
             </ul>
         </nav>
     </footer>
