--- a/Components/homepage/home.html
+++ b/Components/homepage/home.html
@@ -5,7 +5,7 @@
   <meta charset="utif-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Homepage</title>
-  <link rel="stylesheet" href="reset.css" type="text/css" />
+  <link rel="stylesheet" href="../../reset.css" type="text/css" />
   <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
