--- a/Components/welcome/welcome.html
+++ b/Components/welcome/welcome.html
@@ -8,13 +8,25 @@
     <title>Health+</title>
     <link rel="stylesheet" href="../reset.css" type="text/css" />
     <link rel="stylesheet" href="main.css" type="text/css" />
+    <link rel="stylesheet" href="../../Header/header.css" type="text/css" />
+
 </head>
 <body>
     <header>
         <div class="wrapper">
                 <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
             <div class="header-text">
-                <h1>Health+</h1>
+                <h1> <a href="../../Homepage/home/home.html">Health+</a></h1>
+            </div>
+            <div>
+                <nav>
+                    <ul>
+                        <li>Track</li>
+                        <li>Forum</li>
+                        <li>Chat</li>
+                        <li>Contact</li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </header>
