--- a/Components/Footer/contact/contact.html
+++ b/Components/Footer/contact/contact.html
@@ -9,5 +9,5 @@
 
 <body>
     <p>Here will be our Contact details.</p>
-    <a href="main.html">Go back to main page.</a>
+    <a href="../../welcome/welcome.html">Go back to main page.</a>
 </body>
