--- a/Components/Forum/Forum.html
+++ b/Components/Forum/Forum.html
@@ -6,24 +6,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Health+</title>
-    <link rel="stylesheet" href="../../reset.css" type="text/css" />
+    <link rel="stylesheet" href="../reset.css" type="text/css" />
+    <link rel="stylesheet" href="../header.css" type="text/css" />
     <link rel="stylesheet" href="forum.css" type="text/css" />
-    <link rel="stylesheet" href="../../Header/header.css" type="text/css" />
 </head>
 <body>
     <header>
         <div class="wrapper">
-                <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
+                <img src="../../assets/FDMlogo.png" alt="FDM logo" height="30">
             <div class="header-text">
                 <h1> <a href="../../Homepage/home/home.html">Health+</a></h1>
             </div>
             <div>
                 <nav>
                     <ul>
-                        <li>Track</li>
-                        <li>Forum</li>
-                        <li>Chat</li>
-                        <li>Contact</li>
+                        <li><a href="../track/tracking.html">Track</a></li>
+                        <li><a href="../forum/forum.html">Forum</a></li>
+                        <li><a href="../chat/index.php">Chat</a></li>
+                        <li><a href="../contact/contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -90,10 +90,10 @@
     <footer>
         <nav>
             <ul>
-                <li><a href="../../Homepage/privacy/priv.html">Privacy</a></li>
-                <li><a href="../../Homepage/termsconditions/tandc.html">Terms and Conditions</a></li>
-                <li><a href="../../Homepage/faq/faqs.html">FAQs</a></li>
-                <li><a href="../../Homepage/contact/contact.html">Contact the Team</a></li>
+                <li><a href="../footer/privacy/priv.html">Privacy</a></li>
+                <li><a href="../footer/tc/tandc.html">Terms and Conditions</a></li>
+                <li><a href="../footer/faq/faqs.html">FAQs</a></li>
+                <li><a href="../footer/contact/contact.html">Contact the Team</a></li>
             </ul>
         </nav>
     </footer>
