--- a/Components/welcome/welcome.html
+++ b/Components/welcome/welcome.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Health+</title>
     <link rel="stylesheet" href="../reset.css" type="text/css" />
-    <link rel="stylesheet" href="main.css" type="text/css" />
-    <link rel="stylesheet" href="../../Header/header.css" type="text/css" />
+    <link rel="stylesheet" href="../header.css" type="text/css" />
+    <link rel="stylesheet" href="welcome.css" type="text/css" />
 
 </head>
 <body>
@@ -40,10 +40,10 @@
     <footer>
         <nav>
             <ul>
-                <li><a href="../../Homepage/privacy/priv.html">Privacy</a></li>
-                <li><a href="../../Homepage/termsconditions/tandc.html">Terms and Conditions</a></li>
-                <li><a href="../../Homepage/faq/faqs.html">FAQs</a></li>
-                <li><a href="../../Homepage/contact/contact.html">Contact the Team</a></li>
+                <li><a href="../footer/privacy/priv.html">Privacy</a></li>
+                <li><a href="../footer/tc/tandc.html">Terms and Conditions</a></li>
+                <li><a href="../footer/faq/faqs.html">FAQs</a></li>
+                <li><a href="../footer/contact/contact.html">Contact the Team</a></li>
             </ul>
         </nav>
     </footer>
