--- a/Components/homepage/home.html
+++ b/Components/homepage/home.html
@@ -5,18 +5,19 @@
   <meta charset="utif-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Homepage</title>
-  <link rel="stylesheet" href="../../reset.css" type="text/css" />
-  <link rel="stylesheet" href="style.css" type="text/css" />
+  <link rel="stylesheet" href="../reset.css" type="text/css" />
+  <link rel="stylesheet" href="../header.css" type="text/css" />
+  <link rel="stylesheet" href="home.css" type="text/css" />
 </head>
 <body>
     <p>Welcome to homepage!</p>
     <footer>
         <nav>
             <ul>
-                <li><a href="../../Homepage/privacy/priv.html">Privacy</a></li>
-                <li><a href="../../Homepage/termsconditions/tandc.html">Terms and Conditions</a></li>
-                <li><a href="../../Homepage/faq/faqs.html">FAQs</a></li>
-                <li><a href="../../Homepage/contact/contact.html">Contact the Team</a></li>
+                <li><a href="../footer/privacy/priv.html">Privacy</a></li>
+                <li><a href="../footer/tc/tandc.html">Terms and Conditions</a></li>
+                <li><a href="../footer/faq/faqs.html">FAQs</a></li>
+                <li><a href="../footer/contact/contact.html">Contact the Team</a></li>
             </ul>
         </nav>
     </footer>
