--- a/Components/Forum/Forum.html
+++ b/Components/Forum/Forum.html
@@ -8,6 +8,7 @@
     <title>Health+</title>
     <link rel="stylesheet" href="../reset.css" type="text/css" />
     <link rel="stylesheet" href="../header.css" type="text/css" />
+    <link rel="stylesheet" href="../footer.css" type="text/css" />
     <link rel="stylesheet" href="forum.css" type="text/css" />
 </head>
 <body>
@@ -15,7 +16,7 @@
         <div class="wrapper">
                 <img src="../../assets/FDMlogo.png" alt="FDM logo" height="30">
             <div class="header-text">
-                <h1> <a href="../../Homepage/home/home.html">Health+</a></h1>
+                <h1> <a href="../homepage/home.html">Health+</a></h1>
             </div>
             <div>
                 <nav>
