--- a/Components/welcome/welcome.html
+++ b/Components/welcome/welcome.html
@@ -8,6 +8,7 @@
     <title>Health+</title>
     <link rel="stylesheet" href="../reset.css" type="text/css" />
     <link rel="stylesheet" href="../header.css" type="text/css" />
+    <link rel="stylesheet" href="../footer.css" type="text/css" />
     <link rel="stylesheet" href="welcome.css" type="text/css" />
 
 </head>
@@ -16,17 +17,9 @@
         <div class="wrapper">
                 <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
             <div class="header-text">
-                <h1> <a href="../../Homepage/home/home.html">Health+</a></h1>
+                <h1>Health+</h1>
             </div>
             <div>
-                <nav>
-                    <ul>
-                        <li>Track</li>
-                        <li>Forum</li>
-                        <li>Chat</li>
-                        <li>Contact</li>
-                    </ul>
-                </nav>
             </div>
         </div>
     </header>
