--- a/Components/Forum/forum.css
+++ b/Components/Forum/forum.css
@@ -63,6 +63,10 @@ textarea,input{
     max-width: 96%;
 }
 
+textarea{
+  height: 5rem;
+}
+
   #posts {
     max-width: 600px;
     margin: 50px auto 0;
@@ -85,15 +89,7 @@ textarea,input{
     border: none;
     border-bottom: 1px solid #ccc;
   }
-  
-  footer {
-    max-width: 1200px;
-    margin: 50px auto 0;
-    padding: 20px;
-    background-color: #f2f2f2;
-    border-top: 1px solid #ccc;
-    text-align: center;
-  }
+
 
 #posts {
     max-width: 800px;
