--- a/Components/header.css
+++ b/Components/header.css
@@ -18,21 +18,21 @@ header {
     padding: 20px;
   }
   
-  img {
+header img {
     display: inline-block;
     margin-right: 20px;
   }
   
-  h1 {
+header h1 {
     font-size: 24px;
   }
 
-  nav ul {
+header nav ul {
     display: flex;
     list-style: none;
   }
   
-  nav li {
+header nav li {
     margin-right: 20px;
     text-transform: uppercase;
     font-weight: bold;
