--- a/Components/homepage/home.html
+++ b/Components/homepage/home.html
@@ -7,6 +7,7 @@
   <title>Homepage</title>
   <link rel="stylesheet" href="../reset.css" type="text/css" />
   <link rel="stylesheet" href="../header.css" type="text/css" />
+  <link rel="stylesheet" href="../footer.css" type="text/css" />
   <link rel="stylesheet" href="home.css" type="text/css" />
 </head>
 <body>
