--- a/Components/login/login.html
+++ b/Components/login/login.html
@@ -9,6 +9,7 @@
     <title>Health+</title>
     <link rel="stylesheet" href="../reset.css" type="text/css" />
     <link rel="stylesheet" href="../header.css" type="text/css" />
+    <link rel="stylesheet" href="../footer.css" type="text/css" />
 </head>
 <body>
     <header>
