--- a/Components/Footer/faq/faqs.html
+++ b/Components/Footer/faq/faqs.html
@@ -2,13 +2,47 @@
 <html lang="en">
 
 <head>
+    <script type="text/javascript" src="https://livejs.com/live.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FAQs</title>
-    
-</head>
+    <title>FAQ's</title>
+    <link rel="stylesheet" href="../../reset.css" type="text/css" />
+    <link rel="stylesheet" href="../../header.css" type="text/css" />
+    <link rel="stylesheet" href="../footer_pages.css" type="text/css" />
 
+</head>
 <body>
-    <p>Here will be FAQs.</p>
-    <a href="../../welcome/welcome.html">Go back to main page.</a>
+    <header>
+        <div class="wrapper">
+                <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
+            <div class="header-text">
+                <h1><a href="../Homepage/home/home.html">Health+</a></h1>
+            </div>
+            <div>
+                <nav>
+                    <ul>
+                        <li><a href="../../Track/tracking.html">Track</a></li>
+                        <li><a href="../../Forum/Forum.html">Forum</a></li>
+                        <li>Chat</li>
+                        <li><a href="../../Contact/Contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <div class="main">
+        <h3>Frequently Asked Questions (FAQ's)</h3>
+
+    </div>
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="../privacy/priv.html">Privacy</a></li>
+                <li><a href="../tc/tandc.html">Terms and Conditions</a></li>
+                <li><a href="faqs.html">FAQs</a></li>
+                <li><a href="../contact/contact.html">Contact the Team</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
+
