--- a/Components/Footer/contact/contact.html
+++ b/Components/Footer/contact/contact.html
@@ -2,12 +2,53 @@
 <html lang="en">
 
 <head>
+    <script type="text/javascript" src="https://livejs.com/live.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contact</title>
-</head>
+    <title>Contact Health+</title>
+    <link rel="stylesheet" href="../../reset.css" type="text/css" />
+    <link rel="stylesheet" href="../../header.css" type="text/css" />
+    <link rel="stylesheet" href="../footer_pages.css" type="text/css" />
 
+</head>
 <body>
-    <p>Here will be our Contact details.</p>
-    <a href="../../welcome/welcome.html">Go back to main page.</a>
+    <header>
+        <div class="wrapper">
+                <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
+            <div class="header-text">
+                <h1><a href="../Homepage/home/home.html">Health+</a></h1>
+            </div>
+            <div>
+                <nav>
+                    <ul>
+                        <li><a href="../../Track/tracking.html">Track</a></li>
+                        <li><a href="../../Forum/Forum.html">Forum</a></li>
+                        <li>Chat</li>
+                        <li><a href="../../Contact/Contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <div class="main">
+        <h3>Development Team's Contact Information</h3>
+        <p>PATRYCJA KALINOWSKA: p.kalinowska@se21.qmul.ac.uk</p>
+        <p>AAYUSHI OZA: a.k.oza@se21.qmul.ac.uk</p>
+        <p>DANA ZERTI: d.zerti@se21.qmul.ac.uk</p>
+        <p>FARIS AL-DANDAL: f.aldandal@se20.qmul.ac.uk</p>
+        <p>IMRAN KAYANI: i.kayani@se20.qmul.ac.uk</p>
+        <p>BEKIM GERGURI: b.gerguri@se21.qmul.ac.uk</p>
+        <p>VINDHYA MAKKUNI: v.l.makkuni@se21.qmul.ac.uk</p>
+    </div>
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="../privacy/priv.html">Privacy</a></li>
+                <li><a href="../tc/tandc.html">Terms and Conditions</a></li>
+                <li><a href="../faq/faqs.html">FAQs</a></li>
+                <li><a href="contact.html">Contact the Team</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
+
