fixed login link

--- a/Components/welcome/welcome.html
+++ b/Components/welcome/welcome.html
@@ -28,7 +28,7 @@
         <p>Health+ is a Wellbeing WebApp, specifically targeted towards FDM consultants and internal staff. <br>
         Health+ will provide fitness, mental health and general wellbeing support through features like: trackers, various resources on these topics, <br>
         forums and a chat function, where FDM Employees will be able to contact one of the 30 Mental Health Ambassadors.</p>
-        <div class="button"><button><a class="b" href="login.html">Click here to login!</a></button></div>
+        <div class="button"><button><a class="b" href="../login/login.html">Click here to login!</a></button></div>
     </div>
     <footer>
         <nav>
