--- a/Components/Footer/tc/tandc.html
+++ b/Components/Footer/tc/tandc.html
@@ -8,6 +8,7 @@
     <title>Terms and Conditions</title>
     <link rel="stylesheet" href="../../reset.css" type="text/css" />
     <link rel="stylesheet" href="../../header.css" type="text/css" />
+    <link rel="stylesheet" href="../../footer.css" type="text/css" />
     <link rel="stylesheet" href="../footer_pages.css" type="text/css" />
 
 </head>
