--- a/Components/login/login.html
+++ b/Components/login/login.html
@@ -10,14 +10,23 @@
     <link rel="stylesheet" href="../reset.css" type="text/css" />
     <link rel="stylesheet" href="../header.css" type="text/css" />
     <link rel="stylesheet" href="../footer.css" type="text/css" />
+    <link rel="stylesheet" href="login.css" type="text/css" />
 </head>
+<header>
+    <div class="wrapper">
+            <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
+        <div class="header-text">
+            <h1>Health+</h1>
+        </div>
+        <div>
+        </div>
+    </div>
+</header>
 <body>
-    <header>
-        <div>FDM Logo Placeholder</div>
-    </header>
+    <div class="login-form">
     <form>
         <fieldset>
-            <legend>Health+ Logo//<br />Sign in to Health+</legend>
+            <legend>Sign in to Health+</legend>
             <section>
             <p>
                 <label>Username</label><br/>
@@ -30,10 +39,13 @@
                 one uppercase and lower case letter and at least one number."/>
                 <nav><p>Forgot password?</p></nav>
             </p>
-            <a href="home.html"><input type="submit" value="Login"/></a>
+            <a href="../homepage/home.html">
+                <input type="submit" value="Login"/>
+            </a>
           </section>
         </fieldset>
     </form>
+</div>
     <footer>
         <nav>
             <ul>
