fixed login button

--- a/Components/login/login.html
+++ b/Components/login/login.html
@@ -24,7 +24,7 @@
 </header>
 <body>
     <div class="login-form">
-    <form>
+        <form action="../homepage/home.html">
         <fieldset>
             <legend>Sign in to Health+</legend>
             <section>
@@ -39,7 +39,6 @@
                 one uppercase and lower case letter and at least one number."/>
                 <nav><p>Forgot password?</p></nav>
             </p>
-            <a href="../homepage/home.html">
                 <input type="submit" value="Login"/>
             </a>
           </section>
