--- a/Components/login/login.css
+++ b/Components/login/login.css
@@ -37,7 +37,7 @@
     font-size: 16px;
   }
   
-  input[type="submit"] {
+ .submit{
     background-color: #4CAF50;
     color: #fff;
     padding: 10px 20px;
@@ -46,7 +46,7 @@
     cursor: pointer;
     font-size: 16px;
   }
-  input[type="submit"]:hover {
+  .submit:hover {
     background-color: #45a049;
   }
   
