--- a/Components/footer/faq/faqs.html
+++ b/Components/footer/faq/faqs.html
@@ -13,24 +13,17 @@
 
 </head>
 <body>
-    <header>
-        <div class="wrapper">
-                <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
-            <div class="header-text">
-                <h1><a href="../Homepage/home/home.html">Health+</a></h1>
+
+        <header>
+            <div class="wrapper">
+                    <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
+                <div class="header-text">
+                    <h1>Health+</h1>
+                </div>
+                <div>
+                </div>
             </div>
-            <div>
-                <nav>
-                    <ul>
-                        <li><a href="../../Track/tracking.html">Track</a></li>
-                        <li><a href="../../Forum/Forum.html">Forum</a></li>
-                        <li>Chat</li>
-                        <li><a href="../../Contact/Contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
+        </header>
     <div class="main">
         <h3>Frequently Asked Questions (FAQ's)</h3>
 
