--- a/Components/footer/tc/tandc.html
+++ b/Components/footer/tc/tandc.html
@@ -17,17 +17,9 @@
         <div class="wrapper">
                 <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
             <div class="header-text">
-                <h1><a href="../Homepage/home/home.html">Health+</a></h1>
+                <h1>Health+</h1>
             </div>
             <div>
-                <nav>
-                    <ul>
-                        <li><a href="../../Track/tracking.html">Track</a></li>
-                        <li><a href="../../Forum/Forum.html">Forum</a></li>
-                        <li>Chat</li>
-                        <li><a href="../../Contact/Contact.html">Contact</a></li>
-                    </ul>
-                </nav>
             </div>
         </div>
     </header>
