updated readme page

--- a/Components/footer/contact/contact.html
+++ b/Components/footer/contact/contact.html
@@ -27,7 +27,7 @@
         <h3>Development Team's Contact Information</h3>
         <p>PATRYCJA KALINOWSKA: p.kalinowska@se21.qmul.ac.uk</p>
         <p>AAYUSHI OZA: a.k.oza@se21.qmul.ac.uk</p>
-        <p>DANA ZERTI: d.zerti@se21.qmul.ac.uk</p>
+        <p>DANA ZERTI: zertidana@gmail.com</p>
         <p>FARIS AL-DANDAL: f.aldandal@se20.qmul.ac.uk</p>
         <p>IMRAN KAYANI: i.kayani@se20.qmul.ac.uk</p>
         <p>BEKIM GERGURI: b.gerguri@se21.qmul.ac.uk</p>
