--- a/Components/footer/tc/tandc.html
+++ b/Components/footer/tc/tandc.html
@@ -17,7 +17,7 @@
         <div class="wrapper">
                 <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
             <div class="header-text">
-                <h1>Health+</h1>
+                <h1><a href="../../welcome/welcome.html">Health+</a></h1>
             </div>
             <div>
             </div>
