attempted to fix logo

--- a/Components/forum/forum.html
+++ b/Components/forum/forum.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="wrapper">
-                <img src="../../assets/FDMlogo.png" alt="FDM logo" height="30">
+                <img src="../assets/FDMlogo.png" alt="FDM logo" height="30">
             <div class="header-text">
                 <h1> <a href="../homepage/home.html">Health+</a></h1>
             </div>
