--- a/Components/login/login.html
+++ b/Components/login/login.html
@@ -14,7 +14,7 @@
 </head>
 <header>
     <div class="wrapper">
-            <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
+            <img src="../assets/FDMlogo.png" alt="FDM logo" height="30">
         <div class="header-text">
             <h1>Health+</h1>
         </div>
