fixed Track link

--- a/Components/forum/forum.html
+++ b/Components/forum/forum.html
@@ -14,14 +14,14 @@
 <body>
     <header>
         <div class="wrapper">
-                <img src="../../assets/FDMlogo.png" alt="FDM logo" height="30">
+                <img src="../assets/FDMlogo.png" alt="FDM logo" height="30">
             <div class="header-text">
                 <h1> <a href="../homepage/home.html">Health+</a></h1>
             </div>
             <div>
                 <nav>
                     <ul>
-                        <li><a href="../track/tracking.html">Track</a></li>
+                        <li><a href="../Track/trackermainpage.html">Track</a></li>
                         <li><a href="../forum/forum.html">Forum</a></li>
                         <li><a href="../contact/contact.html">Contact</a></li>
                     </ul>
