--- a/Components/Track/FitnessTracker.html
+++ b/Components/Track/FitnessTracker.html
@@ -56,6 +56,7 @@
     <p>Calories Consumed: <span id="caloriesConsumed">0</span></p>
     <p>Calories Burned: <span id="caloriesBurned">0</span></p>
     <p>Net Calories: <span id="netCalories">0</span></p>
+    <p><button onclick="updateTracker()" id="updateTracker">Update Tracker</button></p>
 </div>
 <script src="script.js"></script>
 </body>
