--- a/Components/Track/Moodtracker.html
+++ b/Components/Track/Moodtracker.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="Moodtracker.css">
 </head>
 
-<form action="submit-form.php" method="POST">
+<form action="../homepage/home.html" method="GET">
     <h2>How are you feeling today?</h2>
     <p>Please select an image that best represents your current mood:</p>
     <label for="happy"><img src="http://cdn.shopify.com/s/files/1/1061/1924/products/Emoji_Icon_-_Smiling_grande.png?v=1571606089" alt="Happy"></label>
