--- a/Components/Track/Moodtracker.css
+++ b/Components/Track/Moodtracker.css
@@ -1,24 +1,24 @@
 body {
-  margin-top: 120px; /* Set the margin to the height of the header */
-  margin-bottom: 80px; /* Set the margin to the height of the footer */
+  margin-top: 120px; 
+  margin-bottom: 80px; 
   font-family: Arial, sans-serif;
 }
 
 .mood-tracking {
-  background-color: #f2f2f2; /* light grey box */
-  padding: 40px; /* add some padding to the box */
-  max-width: 800px; /* set the maximum width of the box */
-  margin: 0 auto; /* center the box horizontally */
+  background-color: #f2f2f2; 
+  padding: 40px; 
+  max-width: 800px; 
+  margin: 0 auto; 
 }
 
 
 .mood-tracking button[type="submit"] {
   background-color: #000;
-  color: #fff; /* set text color to white */
+  color: #fff; 
 }
 
 body:not(.header):not(.footer) {
-  background-color: #fff; /* white background, excluding header and footer */
+  background-color: #fff; 
 }
 
 .mood-image {
@@ -26,14 +26,14 @@ body:not(.header):not(.footer) {
   margin-bottom: 10px;
   border-radius: 50%;
   cursor: pointer;
-  width: 50px; /* set the width of the images */
-  height: 50px; /* set the height of the images */
+  width: 50px; 
+  height: 50px; 
   object-fit: cover;
 }
 
 .mood-tracking p {
-  margin-bottom: 20px; /* add some space between the paragraphs */
-  line-height: 1.5; /* set the line height for better readability */
+  margin-bottom: 20px; 
+  line-height: 1.5; 
 }
 
 .mood-tracking h2 {
@@ -41,7 +41,7 @@ body:not(.header):not(.footer) {
 }
 
 .mood-tracking .question {
-  margin-bottom: 20px; /* add some space under each question */
+  margin-bottom: 20px; 
 }
 
 .mh{
