--- a/Components/Track/Moodtracker.css
+++ b/Components/Track/Moodtracker.css
@@ -1,80 +1,71 @@
 body {
-  background-color: #F1F1F1;
+  margin-top: 120px; 
+  margin-bottom: 80px; 
   font-family: Arial, sans-serif;
 }
 
-form {
-  max-width: 500px;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #E0E0E0;
-  border-radius: 5px;
-  background-color: #FFF;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+.mood-tracking {
+  background-color: #f2f2f2; 
+  padding: 40px; 
+  max-width: 800px; 
+  margin: 0 auto; 
 }
 
-h2 {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 10px;
-  color: #3E3F40;
+
+.mood-tracking button[type="submit"] {
+  background-color: #000;
+  color: #fff; 
 }
 
-label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-  color: #3E3F40;
+body:not(.header):not(.footer) {
+  background-color: #fff; 
 }
 
-input[type="radio"],
-input[type="checkbox"] {
-  margin-right: 5px;
-}
-
-img {
+.mood-image {
   display: block;
   margin-bottom: 10px;
   border-radius: 50%;
   cursor: pointer;
-  width: 40px;
-  height: 40px;
+  width: 50px; 
+  height: 50px; 
   object-fit: cover;
 }
 
-input[type="range"] {
-  width: 100%;
+.mood-tracking p {
+  margin-bottom: 20px; 
+  line-height: 1.5; 
 }
 
-select,
-input[type="number"] {
-  width: 100%;
-  padding: 5px;
+.mood-tracking h2 {
   margin-bottom: 10px;
-  border-radius: 5px;
-  border: 1px solid #E0E0E0;
-  font-size: 16px;
 }
 
-input[type="checkbox"],
-input[type="radio"] {
-  display: inline-block;
-  margin-right: 5px;
+.mood-tracking .question {
+  margin-bottom: 20px; 
 }
 
-input[type="submit"] {
-  display: block;
-  margin: 20px auto 0;
-  padding: 10px 20px;
-  background-color: #2C3E50;
-  color: #FFF;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+.mh{
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-input[type="submit"]:hover {
-  background-color: #1A242F;
+.sl{
+  margin-bottom: 20px;
+}
+
+.sq{
+  margin-bottom: 20px;
+}
+
+.m{
+  margin-bottom: 20px;
+}
+
+.j{
+  margin-top: 20px;
+}
+
+.s{
+  margin-top: 20px;
+  
 }
