--- a/Components/homepage/home.html
+++ b/Components/homepage/home.html
@@ -10,27 +10,25 @@
     <link rel="stylesheet" href="../header.css" type="text/css" />
     <link rel="stylesheet" href="../footer.css" type="text/css" />
     <link rel="stylesheet" href="home.css" type="text/css" />
-    <script src="home.js"></script>
 </head>
 <body>
     <header>
-    <div class="wrapper">
-        <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
-    <div class="header-text">
-        <h1> <a href="home.html">Health+</a></h1>
-    </div>
-    <div>
-        <nav>
-            <ul>
-                <li><a href="../Track/FitnessTracker.html">Fitness Tracker</a></li>
-                <li><a href="../Track/Moodtracker.html">Mood Tracker</a></li>
-                <li>Chat</li>
-                <li><a href="../contact/contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-</div>
-</header>
+        <div class="wrapper">
+                <img src="../assets/FDMlogo.png" alt="FDM logo" height="30">
+            <div class="header-text">
+                <h1> <a href="../homepage/home.html">Health+</a></h1>
+            </div>
+            <div>
+                <nav>
+                    <ul>
+                        <li><a href="../Track/trackermainpage.html">Track</a></li>
+                        <li><a href="../forum/forum.html">Forum</a></li>
+                        <li><a href="../contact/contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
     <div class="main">
         <h3>Welcome to Health+</h3>
     </div>
