--- a/Components/homepage/home.html
+++ b/Components/homepage/home.html
@@ -10,13 +10,14 @@
     <link rel="stylesheet" href="../header.css" type="text/css" />
     <link rel="stylesheet" href="../footer.css" type="text/css" />
     <link rel="stylesheet" href="home.css" type="text/css" />
+    <script src="home.js"></script>
 </head>
 <body>
     <header>
         <div class="wrapper">
                 <img src="../assets/FDMlogo.png" alt="FDM logo" height="30">
             <div class="header-text">
-                <h1> <a href="../homepage/home.html">Health+</a></h1>
+                <h1><a href="../homepage/home.html">Health+</a></h1>
             </div>
             <div>
                 <nav>
