--- a/Components/homepage/home.css
+++ b/Components/homepage/home.css
@@ -27,16 +27,17 @@ h1{
     text-decoration: none;
   }
 .pageinfo{
-  display: flex;
+
   text-align: center;
 }
 .track{
     outline: auto;
     width: 25%;
     outline-color:rgb(130, 121, 121);
-    float: left;
-    margin-left: 30px;
-    padding-left: 0.3rem;
+    display: inline-block;
+    vertical-align: top;
+    padding-bottom: 2.85%;
+    margin-bottom: 2.85%;
 }
 
 .articles{
@@ -44,6 +45,8 @@ h1{
     width: 25%;
     outline-color:rgb(130, 121, 121);
     color:rgb(130, 121, 121);
-    float: right;
-    padding-left: 0.3rem;
+    display: inline-block;
+    vertical-align: top;
+    padding-bottom: 2%;
+    margin-bottom: 2%;
 }
