--- a/Components/Track/FitnessTracker.html
+++ b/Components/Track/FitnessTracker.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Health+</title>
+    <title>Fitness Tracker</title>
     <link rel="stylesheet" href="../reset.css" type="text/css" />
     <link rel="stylesheet" href="../header.css" type="text/css" />
     <link rel="stylesheet" href="../footer.css" type="text/css" />
     <link rel="stylesheet" href="layout.css" type="text/css" />
-    
-    
-
-
 </head>
 
 <body>
@@ -22,9 +18,8 @@
             <div>
                 <nav>
                     <ul>
-                        <li><a href="../track/tracking.html">Track</a></li>
+                        <li><a href="trackermainpage.html">Track</a></li>
                         <li><a href="../forum/forum.html">Forum</a></li>
-                        <li><a href="../chat/index.php">Chat</a></li>
                         <li><a href="../contact/contact.html">Contact</a></li>
                     </ul>
                 </nav>
@@ -84,8 +79,8 @@
         <p>Calories Burned: <span id="caloriesBurned">0</span></p>
         <p>Net Calories: <span id="netCalories">0</span></p>
         <p><button onclick="updateTracker()" id="updateTracker">Update Tracker</button></p>
+        <script src="script.js"></script>
     </div>
-    <script src="script.js"></script>
 
 <div class="footer-spacer"></div>
     <footer>
