--- a/Components/footer/contact/contact.html
+++ b/Components/footer/contact/contact.html
@@ -15,9 +15,9 @@
 <body>
     <header>
         <div class="wrapper">
-                <img src="../../assets/FDMlogo.png" alt="FDM logo" height="30">
+                <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
             <div class="header-text">
-                <h1><a href="../../welcome/welcome.html">Health+</a></h1>
+                <h1><a href="../../homepage/home.html">Health+</a></h1>
             </div>
             <div>
             </div>
@@ -27,7 +27,7 @@
         <h3>Development Team's Contact Information</h3>
         <p>PATRYCJA KALINOWSKA: p.kalinowska@se21.qmul.ac.uk</p>
         <p>AAYUSHI OZA: a.k.oza@se21.qmul.ac.uk</p>
-        <p>DANA ZERTI: zertidana@gmail.com</p>
+        <p>DANA ZERTI: d.zerti@se21.qmul.ac.uk</p>
         <p>FARIS AL-DANDAL: f.aldandal@se20.qmul.ac.uk</p>
         <p>IMRAN KAYANI: i.kayani@se20.qmul.ac.uk</p>
         <p>BEKIM GERGURI: b.gerguri@se21.qmul.ac.uk</p>
