--- a/Components/footer/faq/faqs.html
+++ b/Components/footer/faq/faqs.html
@@ -16,9 +16,9 @@
 
         <header>
             <div class="wrapper">
-                    <img src="../../assets/FDMlogo.png" alt="FDM logo" height="30">
+                    <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
                 <div class="header-text">
-                    <h1><a href="../../welcome/welcome.html">Health+</a></h1>
+                    <h1><a href="../../homepage/home.html">Health+</a></h1>
                 </div>
                 <div>
                 </div>
