--- a/Components/forum/forum.html
+++ b/Components/forum/forum.html
@@ -21,8 +21,8 @@
             <div>
                 <nav>
                     <ul>
-                        <li><a href="../track/tracking.html">Track</a></li>
-                        <li><a href="../forum/forum.html">Forum</a></li>
+                        <li><a href="../track/trackermainpage.html">Track</a></li>
+                        <li><a href="forum.html">Forum</a></li>
                         <li><a href="../contact/contact.html">Contact</a></li>
                     </ul>
                 </nav>
