--- a/Components/Track/Moodtracker.html
+++ b/Components/Track/Moodtracker.html
@@ -26,7 +26,7 @@
     </div>
 </header>
 
-<form class="mood-tracking" action="../homepage/home.html" method="GET">
+<form class="mood-tracking" action="../homepage/home.html" method="GET" id="mood-tracking">
  
     
     <h2>How are you feeling today?</h2>
@@ -73,7 +73,7 @@
     <div class="s">
     <input type="submit" value="Submit">
     </div>
-
+    <script src="Tracker.js"></script>
 
 </form>
 
@@ -91,4 +91,3 @@
     </footer>
 
 </body>
-
