--- a/Components/contact/contact.html
+++ b/Components/contact/contact.html
@@ -13,16 +13,23 @@
 
 </head>
 <body>
-    <header>
-        <div class="wrapper">
-                <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
-            <div class="header-text">
-                <h1><a href="../homepage/home.html">Health+</a></h1>
+        <header>
+            <div class="wrapper">
+                    <img src="../assets/FDMlogo.png" alt="FDM logo" height="30">
+                <div class="header-text">
+                    <h1> <a href="../homepage/home.html">Health+</a></h1>
+                </div>
+                <div>
+                    <nav>
+                        <ul>
+                            <li><a href="../Track/trackermainpage.html">Track</a></li>
+                            <li><a href="../forum/forum.html">Forum</a></li>
+                            <li><a href="../contact/contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
-            <div>
-            </div>
-        </div>
-    </header>
+        </header>
     <div class="main">
         <h3>Support Helplines</h3>
         <p>UK:</p>
