--- a/Components/forum/forum.html
+++ b/Components/forum/forum.html
@@ -46,7 +46,7 @@
                 <input name="title" type="text" placeholder="Enter title" required>
             </p>
             <p>
-                <h3>Descriptiom</h3>
+                <h3>Description</h3>
                 <textarea name="content" rows="15" placeholder="Enter text" required></textarea>
             </p>
             <div>
