--- a/Components/homepage/home.html
+++ b/Components/homepage/home.html
@@ -30,24 +30,26 @@
             </div>
         </div>
     </header>
-    <div class="main">
-        <h3>Welcome to Health+</h3>
-    </div>
-    <div class="pageinfo">
-    <div class="track">
+    <h2>Welcome to Health+</h2>
+<div class="main">
+
+    <div class="trackers">
         <p id="trackinfo"></p>
     </div>
+
     <div class="articles">
-    <p>Recommended Articles<br></p>
-    Mental Wellbeing:<br>
-    <a href="https://www.fdmgroup.com/blog/tips-on-looking-after-your-mental-health/">Tips on looking after your mental wellbeing</a><br>
-    <a href="https://www.helpguide.org/articles/mental-health/building-better-mental-health.htm">Building better mental health</a><br>
-    <a href="https://www.nuffieldhealth.com/article/diet-tips-to-combat-stress-and-anxiety">Diet tips to combat stress and anxiety</a><br>
-    Fitness:<br>
-    <a href="https://www.health.harvard.edu/topics/exercise-and-fitness">Exercise and Fitness by Harvard</a><br>
-    <a href="https://www.healthline.com/health/fitness-exercise-eating-healthy">Exercise and Eating Healthy</a>
+        <h3>Recommended Articles<br></h3>
+        <br><b>Mental Wellbeing:</b><br>
+        <a href="https://www.fdmgroup.com/blog/tips-on-looking-after-your-mental-health/">Tips on looking after your mental wellbeing</a><br>
+        <a href="https://www.helpguide.org/articles/mental-health/building-better-mental-health.htm">Building better mental health</a><br>
+        <a href="https://www.nuffieldhealth.com/article/diet-tips-to-combat-stress-and-anxiety">Diet tips to combat stress and anxiety</a><br>
+        <br><b>Fitness:</b><br>
+        <a href="https://www.health.harvard.edu/topics/exercise-and-fitness">Exercise and Fitness by Harvard</a><br>
+        <a href="https://www.healthline.com/health/fitness-exercise-eating-healthy">Exercise and Eating Healthy</a>
     </div>
+
 </div>
+
     <footer>
         <nav>
             <ul>
