--- a/Components/homepage/home.html
+++ b/Components/homepage/home.html
@@ -25,6 +25,7 @@
                         <li><a href="../Track/trackermainpage.html">Track</a></li>
                         <li><a href="../forum/forum.html">Forum</a></li>
                         <li><a href="../contact/contact.html">Contact</a></li>
+                        <li><a href="../../index.html">Sign Out</a></li>
                     </ul>
                 </nav>
             </div>
