fixed mobile view

--- a/Components/Track/trackermainpage.html
+++ b/Components/Track/trackermainpage.html
@@ -33,7 +33,9 @@
         <h3>Trackers</h3>
         <div class="buttons">
                 <a href="../Track/Moodtracker.html">Track Mood</a>
-                <a href="../Track/FitnessTracker.html">Track Fitness</a>
+        </div>
+        <div class="buttons">
+            <a href="../Track/FitnessTracker.html">Track Fitness</a>
         </div>
     </div>
     <div class="footer-spacer"></div>
