--- a/Components/homepage/home.html
+++ b/Components/homepage/home.html
@@ -58,8 +58,10 @@
                 <li><a href="../footer/tc/tandc.html">Terms and Conditions</a></li>
                 <li><a href="../footer/faq/faqs.html">FAQs</a></li>
                 <li><a href="../footer/contact/contact.html">Contact the Team</a></li>
+                <li><a href="../footer/feedback/feedback.html">Provide Feedback</a></li>
             </ul>
         </nav>
     </footer>
 <script src="home.js"></script>
 </body>
+
