--- a/Components/footer/feedback/feedback.html
+++ b/Components/footer/feedback/feedback.html
@@ -32,7 +32,7 @@
         <p>Thank you for using Health+! Your feedback is important to us and will help us improve.</p>
     </div>
    
-    <form id="feedbackform" action="../../homepage/home.html" method="post">
+    <form id="feedbackform" action="../../homepage/home.html" method="get">
     <div class="feedbackquestions">
    
         <label for="mood-tracker">On a scale of 1-5, how would you rate your experience with the Mood Tracker?</label>
@@ -105,7 +105,7 @@
     <footer>
         <nav>
             <ul>
-                <li><a href="priv.html">Privacy</a></li>
+                <li><a href="../privacy/priv.html">Privacy</a></li>
                 <li><a href="../tc/tandc.html">Terms and Conditions</a></li>
                 <li><a href="../faq/faqs.html">FAQs</a></li>
                 <li><a href="../contact/contact.html">Contact the Team</a></li>
@@ -113,4 +113,5 @@
         </nav>
     </footer>
 </body>
+
 
